# qwe

./: .gitignore  Makefile  README.md  pubspec.yaml
.github/workflows/: build-matrix.yaml  build-web.yaml  build-windows.yaml  build.yaml  release.yaml
android/app/: build.gradle  google-services.json
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
ios/: firebase_app_id_file.json
ios/Runner/: GoogleService-Info.plist  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  app_desktop.dart  app_mobile.dart  file_logger.dart  firebase_options.dart  main.dart
lib/util/: platforms.dart
linux/: CMakeLists.txt  my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
scripts/ci-msi-builder/: .gitignore  Extra.wxs  Product.wxs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/powershell/: CMakeLists.txt
windows/powershell/modules/Gamebay.Shell/: .gitignore  Gamebay.Shell.psd1  Gamebay.Shell.psm1
windows/powershell/modules/Gamebay.Shell/files/: CustomTaskbar.xml
windows/powershell/modules/Gamebay.Shell/functions/: Disable-GameDVR.ps1  Enable-GameDVR.ps1  Install-Shell.ps1  Lock-EdgeBrowser.ps1  Lock-Permissions.ps1  Open-Settings.ps1  Repair-Shell.ps1  Set-Wallpaper.ps1  Show-Process.ps1  Start-Shell.ps1  Stop-Shell.ps1  Uninstall-Shell.ps1  Unlock-EdgeBrowser.ps1  Unlock-Permissions.ps1
windows/runner/: Runner.rc  main.cpp
(+2 files in other folders)
